--- a/src/ui/view.fxml
+++ b/src/ui/view.fxml
@@ -5,31 +5,40 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="white" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #E5FBFF;" BorderPane.alignment="CENTER">
          <children>
-            <TableView layoutX="23.0" layoutY="93.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C9F9FF;">
+            <TableView fx:id="countryOri" layoutX="23.0" layoutY="93.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C9F9FF;">
               <columns>
-                <TableColumn prefWidth="199.0" style="-fx-background-color: #90D7FF;" text="Pais de origen" />
+                <TableColumn fx:id="origen" prefWidth="199.0" style="-fx-background-color: #90D7FF;" text="Pais de origen" />
               </columns>
             </TableView>
-            <TableView layoutX="255.0" layoutY="93.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C9F9FF;">
+            <TableView fx:id="countyDest" layoutX="255.0" layoutY="93.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #C9F9FF;">
               <columns>
-                <TableColumn prefWidth="199.0" style="-fx-background-color: #90D7FF;" text="Pais de destino" />
+                <TableColumn fx:id="destino" prefWidth="199.0" style="-fx-background-color: #90D7FF;" text="Pais de destino" />
               </columns>
             </TableView>
-            <Button layoutX="48.0" layoutY="34.0" mnemonicParsing="false" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Modo" />
-            <Label layoutX="61.0" layoutY="4.0" text="Label" />
+            <Button layoutX="101.0" layoutY="23.0" mnemonicParsing="false" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Modo" />
+            <Label layoutX="18.0" layoutY="4.0" text="Modo matriz de adjacencia">
+               <font>
+                  <Font name="Broadway" size="15.0" />
+               </font></Label>
             <TextField alignment="CENTER" layoutX="30.0" layoutY="303.0" promptText="Pais Origen" style="-fx-background-color: #C9F9FF;" />
             <TextField alignment="CENTER" layoutX="262.0" layoutY="303.0" promptText="Pais destino" style="-fx-background-color: #C9F9FF;" />
-            <Button layoutX="526.0" layoutY="133.0" mnemonicParsing="false" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Modo" />
-            <Button layoutX="526.0" layoutY="200.0" mnemonicParsing="false" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Modo" />
-            <Button layoutX="526.0" layoutY="272.0" mnemonicParsing="false" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Modo" />
+            <Button layoutX="476.0" layoutY="162.0" mnemonicParsing="false" onAction="#costMin" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Costo Minimo" />
+            <Button layoutX="480.0" layoutY="200.0" mnemonicParsing="false" onAction="#search" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Buscar Vuelo" />
+            <ImageView fitHeight="154.0" fitWidth="156.0" layoutX="456.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Image/avion.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </center>
