--- a/src/ui/view.fxml
+++ b/src/ui/view.fxml
@@ -25,13 +25,13 @@
                 <TableColumn fx:id="destino" prefWidth="199.0" style="-fx-background-color: #90D7FF;" text="Pais de destino" />
               </columns>
             </TableView>
-            <Button layoutX="101.0" layoutY="23.0" mnemonicParsing="false" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Modo" />
-            <Label layoutX="18.0" layoutY="4.0" text="Modo matriz de adjacencia">
+            <Button layoutX="101.0" layoutY="23.0" mnemonicParsing="false" onAction="#changeMod" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Modo" />
+            <Label fx:id="txtMod" layoutX="18.0" layoutY="4.0" text="Modo matriz de adjacencia">
                <font>
                   <Font name="Broadway" size="15.0" />
                </font></Label>
-            <TextField alignment="CENTER" layoutX="30.0" layoutY="303.0" promptText="Pais Origen" style="-fx-background-color: #C9F9FF;" />
-            <TextField alignment="CENTER" layoutX="262.0" layoutY="303.0" promptText="Pais destino" style="-fx-background-color: #C9F9FF;" />
+            <TextField fx:id="countryOrig" alignment="CENTER" editable="false" layoutX="30.0" layoutY="303.0" promptText="Pais Origen" style="-fx-background-color: #C9F9FF;" />
+            <TextField fx:id="countryDestin" alignment="CENTER" editable="false" layoutX="262.0" layoutY="303.0" promptText="Pais destino" style="-fx-background-color: #C9F9FF;" />
             <Button layoutX="476.0" layoutY="162.0" mnemonicParsing="false" onAction="#costMin" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Costo Minimo" />
             <Button layoutX="480.0" layoutY="200.0" mnemonicParsing="false" onAction="#search" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Buscar Vuelo" />
             <ImageView fitHeight="154.0" fitWidth="156.0" layoutX="456.0" pickOnBounds="true" preserveRatio="true">
