--- a/src/ui/view.fxml
+++ b/src/ui/view.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -32,13 +31,9 @@
                </font></Label>
             <TextField fx:id="countryOrig" alignment="CENTER" editable="false" layoutX="30.0" layoutY="303.0" promptText="Pais Origen" style="-fx-background-color: #C9F9FF;" />
             <TextField fx:id="countryDestin" alignment="CENTER" editable="false" layoutX="262.0" layoutY="303.0" promptText="Pais destino" style="-fx-background-color: #C9F9FF;" />
-            <Button layoutX="476.0" layoutY="162.0" mnemonicParsing="false" onAction="#costMin" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Costo Minimo" />
+            <Button layoutX="476.0" layoutY="162.0" mnemonicParsing="false" onAction="#costMin" prefHeight="31.0" prefWidth="109.0" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Costo " />
             <Button layoutX="480.0" layoutY="200.0" mnemonicParsing="false" onAction="#search" style="-fx-background-color: #8BE0EB; -fx-background-radius: 15;" text="Buscar Vuelo" />
-            <ImageView fitHeight="154.0" fitWidth="156.0" layoutX="456.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../Image/avion.png" />
-               </image>
-            </ImageView>
+            <ImageView fx:id="imgAir" fitHeight="154.0" fitWidth="156.0" layoutX="456.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
    </center>
